1. 프론트엔드 저장기능 완료 2. 백엔드 저장기능 확인 400에러뜸

--- a/src/main/resources/templates/pages/menu.html
+++ b/src/main/resources/templates/pages/menu.html
@@ -221,6 +221,9 @@
   function fn_view() {
       let subDiv = document.getElementById('subDiv');
 
+      saveCnt = 0;
+      saveJson = new Array();
+
       $.ajax({
           type: "GET"
         , url : "/menu/view"
