--- a/src/main/resources/templates/pages/store.html
+++ b/src/main/resources/templates/pages/store.html
@@ -30,16 +30,74 @@
   var storeAddressI3 = document.getElementById('storeAddressI3');
   var storeEtcI = document.getElementById('storeEtcI');
 
+  // Json 배열
+  var header = $("meta[name='_csrf_header']").attr("content");
+  var token = $("meta[name='_csrf']").attr("content");
+  var saveJson = new Array();
+  var saveCnt = 0;
+
   // 초기화
   $(function(){
 
   });
 
+  // 저장 데이터
+  function saveTable(event, iRow, colStatus) {
+      let id = iRow.dataset.id == null ? '' : iRow.dataset.id;
+      let findIdx = saveJson.findIndex(function(data){return data.rowId === "data_" + iRow.id});
+
+      if(event == "insert") {
+          // 업데이트
+          if(findIdx >= 0) {
+            alert('ss');
+            saveJson[findIdx].storename = iRow.dataset.storename;
+            saveJson[findIdx].account = iRow.dataset.account;
+            saveJson[findIdx].bizno = iRow.dataset.bizno;
+            saveJson[findIdx].bizname = iRow.dataset.bizname;
+            saveJson[findIdx].tel = iRow.dataset.tel;
+            saveJson[findIdx].opertime = iRow.dataset.opertime;
+            saveJson[findIdx].zipcode = iRow.dataset.zipcode;
+            saveJson[findIdx].address1 = iRow.dataset.address1;
+            saveJson[findIdx].address2 = iRow.dataset.address2;
+            saveJson[findIdx].etc = iRow.dataset.etc;
+
+            return true;
+          }
+
+          // 신규
+          saveJson[saveCnt++] = {
+              "rowId": "data_" + iRow.id
+            , "id" : id
+            , "storename" : iRow.dataset.storename
+            , "account" : iRow.dataset.account
+            , "bizno" : iRow.dataset.bizno
+            , "bizname" : iRow.dataset.bizname
+            , "tel" : iRow.dataset.tel
+            , "opertime" : iRow.dataset.opertime
+            , "likecnt" : iRow.dataset.likecnt
+            , "zipcode" : iRow.dataset.zipcode
+            , "address1" : iRow.dataset.address1
+            , "address2" : iRow.dataset.address2
+            , "etc" : iRow.dataset.etc
+            , "colStatus" : colStatus
+          };
+
+      } else if(event == "delete") {
+          if(findIdx >= 0) {
+              saveJson.splice(findIdx, 1);
+              saveCnt--;
+          }
+      }
+  }
+
   // 조회
   function fn_view() {
     let subDiv = document.getElementById('subDiv');
 
-    let str = '<table style=\"margin-left:5px;\">';
+    saveCnt = 0;
+    saveJson = new Array();
+
+    let str = '<table id=\"datatable\" style=\"margin-left:5px;\">';
         str += '  <thead>';
         str += '    <tr>';
         str += '      <th style="width:100px;" class=\"td_border2\">점포코드</th>';
@@ -84,7 +142,42 @@
         str += '  </tbody>';
         str += '</table>';
 
-     subDiv.innerHTML = str;
+    subDiv.innerHTML = str;
+
+    fn_compInit();
+  }
+
+  // 저장
+  function fn_save() {
+      if(saveJson.length <= 0) {
+          alert('저장할 데이터가 없습니다');
+          return false;
+      }
+
+      $.ajax({
+          type: "POST"
+        , url : "/store/save"
+        ,beforeSend: function(xhr){
+          xhr.setRequestHeader(header, token);
+        }
+        , dataType : "text" // dataType에 따라 실패가 될 수도 있음
+        , contentType : "application/json"
+        , data : JSON.stringify(saveJson)
+      })
+      .done(successFunction)
+      .fail(failFunction);
+  }
+
+  function successFunction(){
+      alert('저장되었습니다.');
+      fn_compInit();
+      saveCnt = 0;
+      saveJson = new Array();
+      fn_view();
+  }
+
+  function failFunction(){
+      alert("관리자에게 문의 바랍니다.");
   }
 
   // 추가
@@ -122,6 +215,29 @@
       cell.className = 'td_border';
       cell.innerHTML = 'ㅤ';
     }
+
+    saveTable('insert', row, 'N');
+  }
+
+  // 삭제
+  function fn_del() {
+      // 테이블
+      let table = document.getElementById('datatable');
+
+      if(dv == null) {
+          alert("삭제할 대상을 선택해주세요.");
+          return false;
+      }
+
+      if(dv.dataset.id == '') {
+        saveTable('delete', dv, 'N');
+      } else {
+        saveTable('insert', dv, 'D');
+      }
+
+      table.deleteRow(dv.rowIndex);
+      fn_compInit();
+      dv = null;
   }
 
   // 데이터 변경
@@ -137,22 +253,34 @@
 
     if(str == 'storename') {
       tdEle1.innerHTML = obj.value;
+      dv.dataset.storename = obj.value;
     } else if (str == 'account') {
       tdEle2.innerHTML = obj.value;
+      dv.dataset.account = obj.value;
     } else if (str == 'bizno') {
       tdEle3.innerHTML = obj.value;
+      dv.dataset.bizno = obj.value;
     } else if (str == 'bizname') {
       tdEle4.innerHTML = obj.value;
+      dv.dataset.bizname = obj.value;
     } else if (str == 'tel') {
       tdEle5.innerHTML = obj.value;
+      dv.dataset.tel = obj.value;
     } else if (str == 'opertime') {
       tdEle6.innerHTML = obj.value; // 흠...
+      dv.dataset.opertime = obj.value;
     } else if (str == 'address') {
-      tdEle7.innerHTML = fn_global_null(storeAddressI1.value) + fn_global_null(storeAddressI2.value)
+      tdEle7.innerHTML = fn_global_null(storeAddressI1.value) + ' ' + fn_global_null(storeAddressI2.value) + ' '
                        + fn_global_null(storeAddressI3.value);
+      dv.dataset.zipcode = fn_global_null(storeAddressI1.value);
+      dv.dataset.address1 = fn_global_null(storeAddressI2.value);
+      dv.dataset.address2 = fn_global_null(storeAddressI3.value);
     } else if (str == 'etc') {
       tdEle8.innerHTML = obj.value;
+      dv.dataset.etc = obj.value;
     }
+
+    saveTable('insert', dv, 'N');
   }
 
   // 행 선택
@@ -234,6 +362,20 @@
             fn_update(obj, 'address');
         }
     }).open();
+  }
+
+  // 컴포넌트 초기화
+  function fn_compInit() {
+    storeNameI.value = '';
+    storeAccountI.value = '';
+    storeBisNumI.value = '';
+    storeBisNameI.value = '';
+    storePhoneI.value = '';
+    storeOperTimeI.value = '';
+    storeAddressI1.value = '';
+    storeAddressI2.value = '';
+    storeAddressI3.value = '';
+    storeEtcI.value = '';
   }
 
   </script>
