1. 로그인 시 쿠키값 문제 해결

--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -40,7 +40,7 @@
 
             // id 쿠키 불러오기
             function getCookie(name) {
-                var search = name = "=";
+                var search = name + "=";
                 if(document.cookie.length > 0) {
                     offset = document.cookie.indexOf(search);
                     if(offset != -1) {
