1.레이아웃 크기 수정

--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -89,7 +89,7 @@
                 </nav>
             </div>
             <div id="layoutSidenav_content">
-                <main id="mainDiv" style="margin:5px 5px 5px 5px; height:100%; width:100">
+                <main id="mainDiv" style="margin:5px 5px 5px 5px; height:100%; width:100%">
                     <!--
                     <div class="container-fluid px-4">
                         <h1 class="mt-4">Dashboard</h1>
