--- a/src/main/resources/templates/pages/menu.html
+++ b/src/main/resources/templates/pages/menu.html
@@ -304,7 +304,7 @@
         <button class="button_2" id="saveBtn" onclick="fn_save(); return false;">저장</button>
       </nav>
     </div>
-    <div id="subDiv" class="card-body" style="margin:5px 5px 5px 5px;">
+    <div id="subDiv" class="card-body" style="height:600px; margin:5px 5px 5px 5px; overflow:auto;">
     </div>
   </div>
 </div>
