--- a/src/main/resources/templates/pages/store.html
+++ b/src/main/resources/templates/pages/store.html
@@ -108,7 +108,7 @@
         , data : str == '' ? " " : str
         , success : function(data) {
           let view = JSON.parse(data);
-          let str = '<table id=\"datatable\" style=\"margin-left:5px;\">';
+          let str = '<table id=\"datatable1\" style=\"margin-left:5px;\">';
               str += '  <thead>';
               str += '    <tr>';
               str += '      <th style="width:100px;" class=\"td_border2\">점포코드</th>';
@@ -219,7 +219,7 @@
   // 추가
   function fn_add() {
     // 테이블
-    let table = document.getElementById('datatable');
+    let table = document.getElementById('datatable1');
     let row;
     let cell;
     let array = ['id', 'storename' ,'account' ,'bizno' ,'bizname','tel'
@@ -259,7 +259,7 @@
   // 삭제
   function fn_del() {
       // 테이블
-      let table = document.getElementById('datatable');
+      let table = document.getElementById('datatable1');
 
       if(dv == null) {
           alert("삭제할 대상을 선택해주세요.");
@@ -443,9 +443,9 @@
         <button class="button_2" id="saveBtn" onclick="fn_save(); return false;">저장</button>
       </nav>
     </div>
-    <div style="width:100%; overflow:auto;">
-      <div id="subDiv" style="width:1310px; height:400px; font-size:13px;">
-        <table id="datatable" style="margin-left:5px;">
+    <div style="width:100%; height:100%; overflow:auto;">
+      <div id="subDiv" style="width:1310px; height:600px; font-size:13px;">
+        <table id="datatable1" style="margin-left:5px;">
           <thead>
           <tr>
             <th style="width:100px;" class="td_border2">점포코드</th>
